Remove unused overloads and empty AI stubs, and serve player-facing text from Japanese messages.yml.
Co-authored-by: Cursor <cursoragent@cursor.com>